src/components/Buttons/Buttons.module.less
// root styles for all buttons
.root {
  background: transparent;
  border: 0;
  cursor: pointer;
  color: var(--content-primary);
  font: var(--btn-text-md);
  display: flex;
  align-items: center;
  justify-content: center;
  // gap: 8px;
  // white-space: nowrap;

  &:disabled {
    pointer-events: none;
  }

  svg,
  svg path {
    fill: var(--content-primary);
  }
}

// standard buttons styles
.standard {
  padding: 8px 16px;
  border: 1px solid transparent;

  &.primary {
    background-color: var(--accent-primary);

    &:hover {
      background-color: var(--accent-secondary);
    }
  }

  &.secondary {
    background-color: var(--bg-primary);
    border-color: var(--accent-primary);

    &:hover {
      border: 1px solid var(--accent-secondary);
    }
  }

  &.large {
    height: 40px;

    @media (max-width: 640px) {
      height: 32px;
    }
  }
  &.medium {
    height: 32px;
  }
  &.small {
    padding: 2px 12px;
    height: 24px;
  }

  &:disabled {
    background-color: var(--bg-secondary);
    border-color: 1px solid var(--bg-border);
    color: var(--content-secondary);
  }
}

// Circle button styles
.circle {
  border-radius: 100px;

  &:disabled {
    border: 1px solid var(--bg-border);
    background-color: var(--bg-primary);
  }
}

.circle.primary,
.circle.secondary {
  padding: 0;

  &.large {
    height: 40px;
    width: 40px;

    @media (max-width: 640px) {
      height: 32px;
      width: 32px;
    }
  }
  &.medium {
    height: 32px;
    width: 32px;
  }
  &.small {
    height: 24px;
    width: 24px;
  }
}

.circle.primary {
  background-color: var(--accent-primary);

  &:hover {
    background-color: var(--accent-secondary);
  }
}

.circle.secondary {
  border: 1px solid var(--bg-border);
  background-color: var(--bg-primary);

  &:hover {
    border-color: var(--content-primary);
  }
}

.circle.text {
  border: 1px solid var(--bg-border);
  background-color: var(--bg-primary);
  padding: 7px 14px;

  &:hover {
    border-color: var(--content-primary);
  }

  @media (max-width: 640px) {
    font: var(--body-text-sm);
    padding: 6px 10px;
  }
}

.walletConnectButton {
  width: 176px;
}

